// Copyright 2020 The protobus developers.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package protobus;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option cc_enable_arenas = true;

message EncapsulatedEvent {
  string topic = 1;
  map<string, string> tags = 2;

  google.protobuf.Timestamp client_event_time = 3;
  google.protobuf.Timestamp client_transmit_time = 4;
  google.protobuf.Timestamp server_receive_time = 5;

  int64 payload_size = 6;
  google.protobuf.Any payload = 7;
}
